fix broken padding on mobile resize

--- a/assets/static/main.css
+++ b/assets/static/main.css
@@ -308,6 +308,13 @@ ul {
 		padding: 6px;
 	}
 }
+
+@media (max-width: 546px) {
+	.header-content {
+		padding-left: 24px;
+		padding-right: 24px;
+	}
+}
 /* #endregion */
 
 /* #region || Hell */
